// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`sysviews.sql > line 1 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 438,
                "relname": "pg_available_extension_versions",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 413,
                "name": "ok",
                "val": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "FuncCall": {
                        "agg_star": true,
                        "funcformat": "COERCE_EXPLICIT_CALL",
                        "funcname": [
                          {
                            "String": {
                              "sval": "count",
                            },
                          },
                        ],
                        "location": 413,
                      },
                    },
                    "location": 422,
                    "name": [
                      {
                        "String": {
                          "sval": ">=",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "ival": {},
                        "location": 425,
                      },
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`sysviews.sql > line 12 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 34,
                "relname": "pg_available_extensions",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 9,
                "name": "ok",
                "val": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "FuncCall": {
                        "agg_star": true,
                        "funcformat": "COERCE_EXPLICIT_CALL",
                        "funcname": [
                          {
                            "String": {
                              "sval": "count",
                            },
                          },
                        ],
                        "location": 9,
                      },
                    },
                    "location": 18,
                    "name": [
                      {
                        "String": {
                          "sval": ">=",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "ival": {},
                        "location": 21,
                      },
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`sysviews.sql > line 14 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 207,
                "relname": "pg_backend_memory_contexts",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 146,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "name",
                        },
                      },
                    ],
                    "location": 146,
                  },
                },
              },
            },
            {
              "ResTarget": {
                "location": 152,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "ident",
                        },
                      },
                    ],
                    "location": 152,
                  },
                },
              },
            },
            {
              "ResTarget": {
                "location": 159,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "parent",
                        },
                      },
                    ],
                    "location": 159,
                  },
                },
              },
            },
            {
              "ResTarget": {
                "location": 167,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "level",
                        },
                      },
                    ],
                    "location": 167,
                  },
                },
              },
            },
            {
              "ResTarget": {
                "location": 174,
                "val": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "total_bytes",
                            },
                          },
                        ],
                        "location": 174,
                      },
                    },
                    "location": 186,
                    "name": [
                      {
                        "String": {
                          "sval": ">=",
                        },
                      },
                    ],
                    "rexpr": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "free_bytes",
                            },
                          },
                        ],
                        "location": 189,
                      },
                    },
                  },
                },
              },
            },
          ],
          "whereClause": {
            "A_Expr": {
              "kind": "AEXPR_OP",
              "lexpr": {
                "ColumnRef": {
                  "fields": [
                    {
                      "String": {
                        "sval": "level",
                      },
                    },
                  ],
                  "location": 240,
                },
              },
              "location": 246,
              "name": [
                {
                  "String": {
                    "sval": "=",
                  },
                },
              ],
              "rexpr": {
                "A_Const": {
                  "ival": {},
                  "location": 248,
                },
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`sysviews.sql > line 19 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 92,
                "relname": "pg_config",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 67,
                "name": "ok",
                "val": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "FuncCall": {
                        "agg_star": true,
                        "funcformat": "COERCE_EXPLICIT_CALL",
                        "funcname": [
                          {
                            "String": {
                              "sval": "count",
                            },
                          },
                        ],
                        "location": 67,
                      },
                    },
                    "location": 76,
                    "name": [
                      {
                        "String": {
                          "sval": ">",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "ival": {
                          "ival": 20,
                        },
                        "location": 78,
                      },
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`sysviews.sql > line 22 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 92,
                "relname": "pg_cursors",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 68,
                "name": "ok",
                "val": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "FuncCall": {
                        "agg_star": true,
                        "funcformat": "COERCE_EXPLICIT_CALL",
                        "funcname": [
                          {
                            "String": {
                              "sval": "count",
                            },
                          },
                        ],
                        "location": 68,
                      },
                    },
                    "location": 77,
                    "name": [
                      {
                        "String": {
                          "sval": "=",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "ival": {},
                        "location": 79,
                      },
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`sysviews.sql > line 25 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 34,
                "relname": "pg_file_settings",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 9,
                "name": "ok",
                "val": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "FuncCall": {
                        "agg_star": true,
                        "funcformat": "COERCE_EXPLICIT_CALL",
                        "funcname": [
                          {
                            "String": {
                              "sval": "count",
                            },
                          },
                        ],
                        "location": 9,
                      },
                    },
                    "location": 18,
                    "name": [
                      {
                        "String": {
                          "sval": ">=",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "ival": {},
                        "location": 21,
                      },
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`sysviews.sql > line 27 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 151,
                "relname": "pg_hba_file_rules",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 68,
                "name": "ok",
                "val": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "FuncCall": {
                        "agg_star": true,
                        "funcformat": "COERCE_EXPLICIT_CALL",
                        "funcname": [
                          {
                            "String": {
                              "sval": "count",
                            },
                          },
                        ],
                        "location": 68,
                      },
                    },
                    "location": 77,
                    "name": [
                      {
                        "String": {
                          "sval": ">",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "ival": {},
                        "location": 79,
                      },
                    },
                  },
                },
              },
            },
            {
              "ResTarget": {
                "location": 88,
                "name": "no_err",
                "val": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "FuncCall": {
                        "agg_filter": {
                          "NullTest": {
                            "arg": {
                              "ColumnRef": {
                                "fields": [
                                  {
                                    "String": {
                                      "sval": "error",
                                    },
                                  },
                                ],
                                "location": 111,
                              },
                            },
                            "location": 117,
                            "nulltesttype": "IS_NOT_NULL",
                          },
                        },
                        "agg_star": true,
                        "funcformat": "COERCE_EXPLICIT_CALL",
                        "funcname": [
                          {
                            "String": {
                              "sval": "count",
                            },
                          },
                        ],
                        "location": 88,
                      },
                    },
                    "location": 130,
                    "name": [
                      {
                        "String": {
                          "sval": "=",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "ival": {},
                        "location": 132,
                      },
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`sysviews.sql > line 31 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 150,
                "relname": "pg_ident_file_mappings",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 66,
                "name": "ok",
                "val": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "FuncCall": {
                        "agg_star": true,
                        "funcformat": "COERCE_EXPLICIT_CALL",
                        "funcname": [
                          {
                            "String": {
                              "sval": "count",
                            },
                          },
                        ],
                        "location": 66,
                      },
                    },
                    "location": 75,
                    "name": [
                      {
                        "String": {
                          "sval": ">=",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "ival": {},
                        "location": 78,
                      },
                    },
                  },
                },
              },
            },
            {
              "ResTarget": {
                "location": 87,
                "name": "no_err",
                "val": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "FuncCall": {
                        "agg_filter": {
                          "NullTest": {
                            "arg": {
                              "ColumnRef": {
                                "fields": [
                                  {
                                    "String": {
                                      "sval": "error",
                                    },
                                  },
                                ],
                                "location": 110,
                              },
                            },
                            "location": 116,
                            "nulltesttype": "IS_NOT_NULL",
                          },
                        },
                        "agg_star": true,
                        "funcformat": "COERCE_EXPLICIT_CALL",
                        "funcname": [
                          {
                            "String": {
                              "sval": "count",
                            },
                          },
                        ],
                        "location": 87,
                      },
                    },
                    "location": 129,
                    "name": [
                      {
                        "String": {
                          "sval": "=",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "ival": {},
                        "location": 131,
                      },
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`sysviews.sql > line 35 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 82,
                "relname": "pg_locks",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 58,
                "name": "ok",
                "val": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "FuncCall": {
                        "agg_star": true,
                        "funcformat": "COERCE_EXPLICIT_CALL",
                        "funcname": [
                          {
                            "String": {
                              "sval": "count",
                            },
                          },
                        ],
                        "location": 58,
                      },
                    },
                    "location": 67,
                    "name": [
                      {
                        "String": {
                          "sval": ">",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "ival": {},
                        "location": 69,
                      },
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`sysviews.sql > line 38 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 104,
                "relname": "pg_prepared_statements",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 80,
                "name": "ok",
                "val": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "FuncCall": {
                        "agg_star": true,
                        "funcformat": "COERCE_EXPLICIT_CALL",
                        "funcname": [
                          {
                            "String": {
                              "sval": "count",
                            },
                          },
                        ],
                        "location": 80,
                      },
                    },
                    "location": 89,
                    "name": [
                      {
                        "String": {
                          "sval": "=",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "ival": {},
                        "location": 91,
                      },
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`sysviews.sql > line 41 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 65,
                "relname": "pg_prepared_xacts",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 40,
                "name": "ok",
                "val": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "FuncCall": {
                        "agg_star": true,
                        "funcformat": "COERCE_EXPLICIT_CALL",
                        "funcname": [
                          {
                            "String": {
                              "sval": "count",
                            },
                          },
                        ],
                        "location": 40,
                      },
                    },
                    "location": 49,
                    "name": [
                      {
                        "String": {
                          "sval": ">=",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "ival": {},
                        "location": 52,
                      },
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`sysviews.sql > line 44 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 81,
                "relname": "pg_stat_slru",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 57,
                "name": "ok",
                "val": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "FuncCall": {
                        "agg_star": true,
                        "funcformat": "COERCE_EXPLICIT_CALL",
                        "funcname": [
                          {
                            "String": {
                              "sval": "count",
                            },
                          },
                        ],
                        "location": 57,
                      },
                    },
                    "location": 66,
                    "name": [
                      {
                        "String": {
                          "sval": ">",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "ival": {},
                        "location": 68,
                      },
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`sysviews.sql > line 47 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 66,
                "relname": "pg_stat_wal",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 42,
                "name": "ok",
                "val": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "FuncCall": {
                        "agg_star": true,
                        "funcformat": "COERCE_EXPLICIT_CALL",
                        "funcname": [
                          {
                            "String": {
                              "sval": "count",
                            },
                          },
                        ],
                        "location": 42,
                      },
                    },
                    "location": 51,
                    "name": [
                      {
                        "String": {
                          "sval": "=",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "ival": {
                          "ival": 1,
                        },
                        "location": 53,
                      },
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`sysviews.sql > line 50 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 82,
                "relname": "pg_stat_wal_receiver",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 58,
                "name": "ok",
                "val": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "FuncCall": {
                        "agg_star": true,
                        "funcformat": "COERCE_EXPLICIT_CALL",
                        "funcname": [
                          {
                            "String": {
                              "sval": "count",
                            },
                          },
                        ],
                        "location": 58,
                      },
                    },
                    "location": 67,
                    "name": [
                      {
                        "String": {
                          "sval": "=",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "ival": {},
                        "location": 69,
                      },
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`sysviews.sql > line 53 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 125,
                "relname": "pg_settings",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 106,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "name",
                        },
                      },
                    ],
                    "location": 106,
                  },
                },
              },
            },
            {
              "ResTarget": {
                "location": 112,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "setting",
                        },
                      },
                    ],
                    "location": 112,
                  },
                },
              },
            },
          ],
          "whereClause": {
            "A_Expr": {
              "kind": "AEXPR_LIKE",
              "lexpr": {
                "ColumnRef": {
                  "fields": [
                    {
                      "String": {
                        "sval": "name",
                      },
                    },
                  ],
                  "location": 143,
                },
              },
              "location": 148,
              "name": [
                {
                  "String": {
                    "sval": "~~",
                  },
                },
              ],
              "rexpr": {
                "A_Const": {
                  "location": 153,
                  "sval": {
                    "sval": "enable%",
                  },
                },
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`sysviews.sql > line 57 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 490,
                "relname": "pg_timezone_names",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 446,
                "name": "ok",
                "val": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "FuncCall": {
                        "agg_distinct": true,
                        "args": [
                          {
                            "ColumnRef": {
                              "fields": [
                                {
                                  "String": {
                                    "sval": "utc_offset",
                                  },
                                },
                              ],
                              "location": 461,
                            },
                          },
                        ],
                        "funcformat": "COERCE_EXPLICIT_CALL",
                        "funcname": [
                          {
                            "String": {
                              "sval": "count",
                            },
                          },
                        ],
                        "location": 446,
                      },
                    },
                    "location": 473,
                    "name": [
                      {
                        "String": {
                          "sval": ">=",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "ival": {
                          "ival": 24,
                        },
                        "location": 476,
                      },
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`sysviews.sql > line 65 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 52,
                "relname": "pg_timezone_abbrevs",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "name": "ok",
                "val": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "FuncCall": {
                        "agg_distinct": true,
                        "args": [
                          {
                            "ColumnRef": {
                              "fields": [
                                {
                                  "String": {
                                    "sval": "utc_offset",
                                  },
                                },
                              ],
                              "location": 23,
                            },
                          },
                        ],
                        "funcformat": "COERCE_EXPLICIT_CALL",
                        "funcname": [
                          {
                            "String": {
                              "sval": "count",
                            },
                          },
                        ],
                        "location": 8,
                      },
                    },
                    "location": 35,
                    "name": [
                      {
                        "String": {
                          "sval": ">=",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "ival": {
                          "ival": 24,
                        },
                        "location": 38,
                      },
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`sysviews.sql > line 66 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "VariableSetStmt": {
          "args": [
            {
              "A_Const": {
                "location": 93,
                "sval": {
                  "sval": "Australia",
                },
              },
            },
          ],
          "kind": "VAR_SET_VALUE",
          "name": "timezone_abbreviations",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`sysviews.sql > line 68 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 52,
                "relname": "pg_timezone_abbrevs",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "name": "ok",
                "val": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "FuncCall": {
                        "agg_distinct": true,
                        "args": [
                          {
                            "ColumnRef": {
                              "fields": [
                                {
                                  "String": {
                                    "sval": "utc_offset",
                                  },
                                },
                              ],
                              "location": 23,
                            },
                          },
                        ],
                        "funcformat": "COERCE_EXPLICIT_CALL",
                        "funcname": [
                          {
                            "String": {
                              "sval": "count",
                            },
                          },
                        ],
                        "location": 8,
                      },
                    },
                    "location": 35,
                    "name": [
                      {
                        "String": {
                          "sval": ">=",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "ival": {
                          "ival": 24,
                        },
                        "location": 38,
                      },
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`sysviews.sql > line 69 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "VariableSetStmt": {
          "args": [
            {
              "A_Const": {
                "location": 30,
                "sval": {
                  "sval": "India",
                },
              },
            },
          ],
          "kind": "VAR_SET_VALUE",
          "name": "timezone_abbreviations",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`sysviews.sql > line 70 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 52,
                "relname": "pg_timezone_abbrevs",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "name": "ok",
                "val": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "FuncCall": {
                        "agg_distinct": true,
                        "args": [
                          {
                            "ColumnRef": {
                              "fields": [
                                {
                                  "String": {
                                    "sval": "utc_offset",
                                  },
                                },
                              ],
                              "location": 23,
                            },
                          },
                        ],
                        "funcformat": "COERCE_EXPLICIT_CALL",
                        "funcname": [
                          {
                            "String": {
                              "sval": "count",
                            },
                          },
                        ],
                        "location": 8,
                      },
                    },
                    "location": 35,
                    "name": [
                      {
                        "String": {
                          "sval": ">=",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "ival": {
                          "ival": 24,
                        },
                        "location": 38,
                      },
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;
